test/expected/explain_stcf_v.out
explain static void f() const
                    ^
21: error: static function can not be const
